--- a/force-app/main/default/classes/AnimalResponse.cls
+++ b/force-app/main/default/classes/AnimalResponse.cls
@@ -7,4 +7,13 @@ public class AnimalResponse {
 		public String eats;	
 		public String says;	
 	}  
+    
+    public static Animal__c getAnimal(String JSONString) {
+        AnimalResponse response = (AnimalResponse) JSON.deserialize(JSONString, AnimalResponse.class);
+        Animal__c animal = new Animal__c();
+        animal.Eats__c = response.animal.eats;
+        animal.Says__c = response.animal.says;
+        animal.Name = response.animal.name;
+        return animal;
+    }
 }
